# code-rag

./: .coderag.json  README.md  create_test_project.py  pyproject.toml  requirements.txt  setup.py  test_advanced_parsing.py  test_basic.py  test_parsing.py
chroma_db/: chroma.sqlite3
code_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: cli.py  config.py  embedder.py  file_scanner.py  github_downloader.py  indexer.py  local_generator.py  models.py  simple_parser.py  tree_parser.py  vector_store.py
test_code/: example.py
test_project/: auth.py  main.py
test_project/utils/: helpers.py
