[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-rag"
dynamic = ["version"]
description = "RAG system for code documentation"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.8"

[project.scripts]
code-rag = "src.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/code-rag"
Repository = "https://github.com/yourusername/code-rag"
Issues = "https://github.com/yourusername/code-rag/issues"